# rust-kres

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  resolve.c  resolve.h
crates/kres/: Cargo.toml
crates/kres-sys/: Cargo.toml  build.rs  resolve.c  resolve.h
crates/kres-sys/src/: lib.rs
crates/kres/src/: cache.rs  lib.rs
src/: lib.rs
