[package]
name = "kres"
version = "0.1.2"
authors = ["Marek Vavrusa <mvavrusa@cloudflare.com>"]
links = "kres"
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/vavrusa/rust-kres"
documentation = "https://docs.rs/kres"
description = """
Bindings to the Knot Resolver library (also known as libkres)
"""
categories = ["external-ffi-bindings"]
edition = "2018"
readme = "README.md"

[dependencies]
libc = "0.2.43"
socket2 = "0.3.8"
bytes = "0.4"
jemallocator = {version = "0.1", optional = true}
parking_lot = {version = "0.6", features = ["nightly"]}

[dev-dependencies]
dnssector = "0.1.3"

[build-dependencies]
bindgen = "0.43.1"
pkg-config = "0.3"
cc = "1.0.25"

[features]
static = []
jemalloc = ["jemallocator"]
default = []

[profile.release]
debug = true
