[package]
name = "kres"
version = "0.1.4"
authors = ["Marek Vavrusa <mvavrusa@cloudflare.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vavrusa/rust-kres"
documentation = "https://docs.rs/kres"
description = """
Bindings to the Knot Resolver library (also known as libkres)
"""
categories = ["external-ffi-bindings"]
edition = "2018"
readme = "README.md"

[dependencies]
bytes = "0.4"
socket2 = "0.3"
jemallocator = { version = "0.1", optional = true }
parking_lot = { version = "0.7" }
kres-sys = { path = "../kres-sys", features = ["static"]}
clockpro-cache = { version = "0.1.7", optional = true}

[dev-dependencies]
dnssector = { git = "https://github.com/jedisct1/dnssector", rev = "ef7625bbc0f97518eadc5878e5ed476fa54c19ae" }

[features]
cache = ["clockpro-cache"]
jemalloc = ["jemallocator"]
default = []